# plots-task

./: README.md
newton-pool/: CMakeLists.txt  colorizer.cpp  colorizer.h  drawer.cpp  drawer.h  main.cpp
