CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJECT_NAME newton-pool)
PROJECT(${PROJECT_NAME})
FIND_PACKAGE(FLTK REQUIRED)

SET(SOURCES
	main.cpp
	drawer.cpp
	colorizer.cpp
	)

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${FLTK_LIBRARIES})
